tiny style fix....

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -28,6 +28,8 @@ html, body {
 		display: inline-block;
 		padding-left: 20px;
 		padding-right: 20px;
+		margin-top: 20px;
+		margin-bottom: 20px;
 	}
 	&__buttons {
 		display: flex;
