--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,6 +9,7 @@ html, body {
 
 * {
 	box-sizing: border-box;
+	font-family: sans-serif;
 }
 
 .form-wrapper {
@@ -20,6 +21,10 @@ html, body {
 	padding-right: 20px;
 	@media screen and (min-width: 400px) {
 		width: 350px;
+	}
+	&__header {
+		font-size: 20px;
+		margin-bottom: 20px;
 	}
 	label {
 		margin-bottom: 10px;
@@ -34,5 +39,13 @@ html, body {
 	&__buttons {
 		display: flex;
 		justify-content: flex-end;
+	}
+	&--empty {
+		font-size: 20px;
+		text-align: center;
+		margin: 20px 0;
+		a {
+			color: rgb(0, 150, 136);
+		}
 	}
 }
